# minichan

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  README.md  configure  configure.ac  configure.ac.bak  index.html  params.json
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.am  Makefile.in  main.glade  minichan.desktop.in
src/: Makefile.am  Makefile.in  ModelColumns.h  ModelPost.h  ModelThread.h  formatting.h  json_funcs.h  main.cpp  settings_dialog.h
