AC_INIT([Minichan], [0.08], [klendathu@hushmail.com])
AM_INIT_AUTOMAKE([-Werror])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
PKG_CHECK_MODULES([DEPS], [gtkmm-3.0 >= 1.0 webkitgtk-3.0 >= 1.5 libcurl >= 3.0 gtkspell3-3.0 >= 3.0 libnotify >= 0.5])
AC_CONFIG_FILES([Makefile src/Makefile data/Makefile data/minichan.desktop])

AC_OUTPUT

